--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <h1>МАОУ гимназия №25. Профориентация</h1>
                 </div>
                 <ul class="nav-links">
-                    <h3><li><a href="#about">О нас</a></li></h3>
-                    <h3><li><a href="#directions">Направления</a></li></h3>
-                    <h3><li><a href="#useful-links">Полезные ресурсы</a></li></h3>
-                    <h3><li><a href="#contacts">Контакты</a></li></h3>
+                    <li><a href="#about">О нас</a></li>
+                    <li><a href="#directions">Направления</a></li>
+                    <li><a href="#useful-links">Полезные ресурсы</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
             </div>
         </nav>
