--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       alt="Логотип гимназии"
                       width="150"
                     />
-                    <h1>МАОУ гимназия №25. Профориентация</h1>
+                    <h1>МАОУ гимназия №25. bek Профориентация</h1>
                 </div>
                 <!-- Кнопка-гамбургер (мобильное меню) -->
                 <div class="hamburger" id="hamburgerBtn">
