--- a/soc_hum.html
+++ b/soc_hum.html
@@ -1,82 +1,128 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Социально-гуманитарное - Гимназия №25</title>
-    <link rel="stylesheet" href="static/styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Социально-гуманитарное - Гимназия №25</title>
+  <link rel="stylesheet" href="static/styles/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
-<header>
+  <header>
     <nav>
-        <div class="container">
-            <div class="logo">
-                <img src="https://sun9-49.userapi.com/impf/QembUeIxPmd5MlqvKsqCyxhtFGuofbhA68owMw/AegFZ-a7NKY.jpg?size=604x405&quality=96&sign=42c72442c5aa0663aad340c47742cf4e&type=album" alt="Логотип гимназии" width="150">
-                <h1>МАОУ гимназия №25. Профориентация</h1>
-            </div>
-            <ul class="nav-links">
-                <li><a href="/">Главная</a></li>
-                <li><a href="#contacts">Контакты</a></li>
-            </ul>
+      <div class="container">
+        <div class="logo">
+          <img
+            src="https://sun9-49.userapi.com/impf/QembUeIxPmd5MlqvKsqCyxhtFGuofbhA68owMw/AegFZ-a7NKY.jpg?size=604x405&quality=96&sign=42c72442c5aa0663aad340c47742cf4e&type=album"
+            alt="Логотип гимназии"
+            width="150"
+          />
+          <h1>МАОУ гимназия №25. Профориентация</h1>
         </div>
-    </nav>
-</header>
-<section class="section">
-    <div class="container">
-        <h2>Социально-гуманитарное направление</h2>
-        <p class="direction-description">Социально-гуманитарный профиль образования — это углублённое изучение дисциплин, связанных с человеком и его жизнедеятельностью в обществе.</p>
-        <h3>Углубленные предметы</h3>
-        <ul class="subjects">
-            <li>История</li>
-            <li>Литература</li>
-            <li>Иностранные языки</li>
-            <li>Обществознание</li>
-        </ul>
-        <h3>Возможные профессии</h3>
-        <ul class="professions">
-            <li>Юрист</li>
-            <li>Учитель</li>
-            <li>Политик</li>
-            <li>Филолог</li>
-            <li>Переводчик</li>
-        </ul>
-        <button class="btn" id="openScheduleModalSocHum">Посмотреть возможное расписание уроков</button>
-        <p class="contact-phone"><b>По вопросам об учебе на направлении:</b></p>
-        <p>   <a href="tel:+79384133313">+7 (938) 413-33-13</a> <span>Ника,</span></p>
-        <p>ученица 10-го социально-гуманитарного класса</p>
-    </div>
-</section>
 
-<!-- Модальное окно для расписания -->
-<div id="scheduleModalSocHum" class="modal">
+        <div class="hamburger" id="hamburgerBtn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
+        <ul class="nav-links" id="navLinks">
+          <li><a href="/">Главная</a></li>
+          <li><a href="#contacts">Контакты</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <section class="section">
+    <div class="container">
+      <h2>Социально-гуманитарное направление</h2>
+      <p class="direction-description">
+        Социально-гуманитарный профиль образования — это углублённое изучение
+        дисциплин, связанных с человеком и его жизнедеятельностью в обществе.
+      </p>
+
+      <h3>Углубленные предметы</h3>
+      <ul class="subjects">
+        <li>История</li>
+        <li>Литература</li>
+        <li>Иностранные языки</li>
+        <li>Обществознание</li>
+      </ul>
+
+      <h3>Возможные профессии</h3>
+      <ul class="professions">
+        <li>Юрист</li>
+        <li>Учитель</li>
+        <li>Политик</li>
+        <li>Филолог</li>
+        <li>Переводчик</li>
+      </ul>
+
+      <button class="btn" id="openScheduleModalSocHum">
+        Посмотреть возможное расписание уроков
+      </button>
+
+      <p class="contact-phone"><b>По вопросам об учебе на направлении:</b></p>
+      <p>
+        <a href="tel:+79384133313">+7 (938) 413-33-13</a>
+        <span>Ника, ученица 10-го социально-гуманитарного класса</span>
+      </p>
+    </div>
+  </section>
+
+  <!-- Модальное окно -->
+  <div id="scheduleModalSocHum" class="modal">
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Пример расписания уроков у 10 класса</h2>
-        <img src="https://i.postimg.cc/8kYqcDQV/image.png" alt="Пример расписания" width="600">
+      <span class="close">&times;</span>
+      <h2>Пример расписания уроков</h2>
+      <img
+        src="https://i.postimg.cc/8kYqcDQV/image.png"
+        alt="Пример расписания"
+        width="600"
+      />
     </div>
-</div>
-<section id="contacts" class="section">
+  </div>
+
+  <section id="contacts" class="section">
     <div class="container">
-        <h2>Контакты</h2>
-        <p class="contacts-text">Если у вас остались вопросы, свяжитесь с нами:</p>
-        <address>
-            <p><b>Адрес гимназии:</b> г. Краснодар, ул. Рашпилевская, д. 134</p>
-            <p><b>Телефон:</b> <a href="tel:+78612550261">+7 (861) 255-02-61</a></p>
-            <p><b>Email:</b> <a href="mailto:school25@kubannet.ru">school25@kubannet.ru</a></p>
-            <ul class="link-list">
-                <li> <b>Сайт гимназии:</b> <a href="https://school25.centerstart.ru" target="">https://school25.centerstart.ru</a></li>
-            </ul>
-        </address>
+      <h2>Контакты</h2>
+      <p class="contacts-text">
+        Если у вас остались вопросы, свяжитесь с нами:
+      </p>
+      <address>
+        <p><b>Адрес гимназии:</b> г. Краснодар, ул. Рашпилевская, д. 134</p>
+        <p>
+          <b>Телефон:</b>
+          <a href="tel:+78612550261">+7 (861) 255-02-61</a>
+        </p>
+        <p>
+          <b>Email:</b>
+          <a href="mailto:school25@kubannet.ru">school25@kubannet.ru</a>
+        </p>
+        <ul class="link-list">
+          <li>
+            <b>Сайт гимназии:</b>
+            <a href="https://school25.centerstart.ru" target="_blank"
+              >https://school25.centerstart.ru</a
+            >
+          </li>
+        </ul>
+      </address>
     </div>
-</section>
-<footer>
+  </section>
+
+  <footer>
     <div class="container">
-        <p>&copy; 2025 МАОУ Гимназия №25. Все права защищены.</p>
+      <p>&copy; 2025 МАОУ Гимназия №25. Все права защищены.</p>
     </div>
-</footer>
-<script src="static/js/core.js"></script>
+  </footer>
+
+  <script src="static/js/core.js"></script>
 </body>
 </html>
