--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section id="hero">
     <div class="container">
         <div class="hero-content">
-            <h1>Профориентация для учащихся МАОУ гимназии № 25 г.h Краснодар</h1>
+            <h1>Профориентация для учащихся МАОУ гимназии № 25 г. Краснодар</h1>
             <p class="hero-subtitle">Мы поможем тебе определиться с направлением обучения в старших классах. Узнай больше о каждом из них и сделай правильный выбор!</p>
             <a href="#directions" class="btn">Узнать подробнее</a>
         </div>
