--- a/soc_econ.html
+++ b/soc_econ.html
@@ -40,7 +40,7 @@
             <li>Менеджер</li>
             <li>Бухгалтер</li>
             <li>Маркетолог</li>
-            <li>Финансист</li>
+            <li>Финансист и др.</li>
         </ul>
         <button class="btn" id="openScheduleModalSocEcon">Посмотреть возможное расписание уроков</button>
         <p class="contact-phone"><b>По вопросам об учебе на направлении:</b></p>
