--- a/soc_hum.html
+++ b/soc_hum.html
@@ -41,7 +41,7 @@
             <li>Учитель</li>
             <li>Политик</li>
             <li>Филолог</li>
-            <li>Переводчик</li>
+            <li>Переводчик и др.</li>
         </ul>
         <button class="btn" id="openScheduleModalSocHum">Посмотреть возможное расписание уроков</button>
         <p class="contact-phone"><b>По вопросам об учебе на направлении:</b></p>
