--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <h2>О нас</h2>
         <p class="about-text">
-                        Гимназия №25 — это образовательное учреждение, которое стремится помочь своим ученикам раскрыть свой потенциал. Мы предлагаем широкий спектр образовательных направлений для старшеклассников, чтобы каждый мог найти свой путь. Наш сайт создан специально для тех учеников гимназии, которые еще не определились с профилем, на котором они хотят обучаться после 9 класса.
+                        Гимназия №25 — это образовательное учреждение, которое стремится помочь ученикам раскрыть свой потенциал. Мы предлагаем широкий спектр образовательных направлений для старшеклассников, чтобы каждый мог найти свой путь. Наш сайт создан специально для тех учеников гимназии, которые еще не определились с профилем, на котором они хотят обучаться после 9 класса.
         </p>
         <div class="school-image">
             <img src="https://tvkrasnodar.ru/upload/resize_cache/iblock/18f/640_360_2/18fe78fe042e6d5e3711ac9145fce79c.jpg" alt="Иллюстрация гимназии" width="700">
