--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="logo">
                 <img src="https://sun9-49.userapi.com/impf/QembUeIxPmd5MlqvKsqCyxhtFGuofbhA68owMw/AegFZ-a7NKY.jpg?size=604x405&quality=96&sign=42c72442c5aa0663aad340c47742cf4e&type=album" alt="Логотип гимназии" width="150">
-                <h1>МАОУ гимназия №35. Профориентация</h1>
+                <h1>МАОУ гимназия №25. Профориентация</h1>
             </div>
             <ul class="nav-links">
                 <h3><li><a href="#about">О нас</a></li></h3>
@@ -59,7 +59,7 @@
         <h2>Направления обучения</h2>
         <div class="directions-grid">
             <div class="direction-card">
-                <img src="https://www.mos.ru/upload/newsfeed/articles/162552212(16).jpg" alt="Физико-математическое направление">
+                <img src="https://avatars.mds.yandex.net/i?id=d0755618dc8bd6ee45b0c3ac5eba161eaf932d1a-9683096-images-thumbs&n=13" alt="Физико-математическое направление">
                 <h3>Физико-математическое</h3>
                 <p> Физико-математический профиль позволяет добиться большего результата в обучении для учащихся, имеющих склонность к точным наукам. </p>
                 <a href="phys_math.html" class="btn">Подробнее</a>
